--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
+root{
+  font-family: 'Fjalla One', sans-serif;
+}
+
+h1,h2{
+  font-family: 'Fjalla One', sans-serif;
+  
+  color:  hsl(224, 64%, 47%);
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+a {
+  color:  hsl(224, 64%, 47%);
+  cursor: pointer;
+  text-decoration:underline;
+}
+
+a:hover{
+  color: hsl(272, 64%, 53%);
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 95vh;
+  padding: 10px;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 94%;
+  height: 94%;
+  border: 2px dashed hsl(224, 64%, 47%);
+  max-width: 100%;
+  animation-duration: 35s;
+  animation-name: boxGrow;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  border-radius: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.centerBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  background-color: hsl(272, 64%, 53%);
+  background-image: linear-gradient(225deg, #FF3CAC 0%, hsl(224, 64%, 47%) 50%, hsl(272, 64%, 53%) 80%);
+  background-size: 100px 100px;
+  animation: gradientMove 10s ease infinite;
+  border-radius: 10%;
+  font-size: .5rem;
+}
+
+@keyframes boxGrow {
+  0% {transform: scale(1.0);}
+  50% {transform: scale(1.08);}
+  100% {transform: scale(1.0);}
+}
+
+@keyframes gradientMove { 
+  0%{background-position:10% 0%}
+  50%{background-position:91% 100%}
+  100%{background-position:10% 0%}
+}
+
+.line-through {
+  text-decoration: line-through;
 }
