--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,13 @@ a:hover{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 94%;
-  height: 94%;
+  width: 93%;
+  height: 93%;
   border: 2px dashed hsl(224, 64%, 47%);
   max-width: 100%;
-  animation-duration: 35s;
-  animation-name: boxGrow;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  -webkit-animation: boxGrow 30s ease-in-out infinite;
+  -moz-animation: boxGrow 30s ease-in-out infinite;
+  animation: boxGrow 30s ease-in-out infinite;
   border-radius: 10%;
 }
 
@@ -64,7 +63,9 @@ a:hover{
   width: 100%;
   background-color: hsl(272, 64%, 53%);
   background-image: linear-gradient(225deg, #FF3CAC 0%, hsl(224, 64%, 47%) 50%, hsl(272, 64%, 53%) 80%);
-  background-size: 100px 100px;
+  background-size: 400px 400px;
+  -webkit-animation: gradientMove 10s ease infinite;
+  -moz-animation: gradientMove 10s ease infinite;
   animation: gradientMove 10s ease infinite;
   border-radius: 10%;
   font-size: .5rem;
@@ -75,10 +76,32 @@ a:hover{
   50% {transform: scale(1.08);}
   100% {transform: scale(1.0);}
 }
+@-webkit-keyframes boxGrow {
+  0% {transform: scale(1.0);}
+  50% {transform: scale(1.08);}
+  100% {transform: scale(1.0);}
+}
+@-moz-keyframes boxGrow {
+  0% {transform: scale(1.0);}
+  50% {transform: scale(1.08);}
+  100% {transform: scale(1.0);}
+}
+
+
 
 @keyframes gradientMove { 
   0%{background-position:10% 0%}
-  50%{background-position:91% 100%}
+  50%{background-position:80% 100%}
+  100%{background-position:10% 0%}
+}
+@-webkit-keyframes gradientMove { 
+  0%{background-position:10% 0%}
+  50%{background-position:80% 100%}
+  100%{background-position:10% 0%}
+}
+@-moz-keyframes gradientMove { 
+  0%{background-position:10% 0%}
+  50%{background-position:80% 100%}
   100%{background-position:10% 0%}
 }
 
